<resources>
    <string name="app_name">medioTry</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="my_exoplayer_fragment_label">My ExoPlayer Fragment</string>
    <string name="audio">playAudio</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="from_raw">fromRaw</string>
    <string name="from_assets">fromAssets</string>
    <string name="mediaCodec">mediaCodec</string>
    <string name="videoCapabilities">videoCapabilities</string>
    <string name="exoplayer">exoPlayer</string>
    <string name="current_video_info">current Video Info</string>
    <string name="showimg">showImg</string>
    <string name="meidapipe">meidaPipe</string>
</resources>