<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

  <SurfaceView
      android:id="@+id/surface"
      android:layout_width="wrap_content"
      android:layout_height="200dp"
      app:layout_constraintBottom_toTopOf="@id/playAudio"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/ic_launcher_foreground"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/playAudio"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/playAudio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/audio"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/surface" />

  <Button
      android:id="@+id/mediaCodec"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/mediaCodec"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/playAudio" />

  <Button
      android:id="@+id/exoPlayer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/exoplayer"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/mediaCodec" />

  <Button
      android:id="@+id/mediaPipe"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/meidapipe"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>