<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

  <fragment
      android:id="@+id/FirstFragment"
      android:name="com.youmehe.mediatry.FirstFragment"
      android:label="@string/first_fragment_label"
      tools:layout="@layout/fragment_first">

    <action
        android:id="@+id/action_FirstFragment_to_SecondFragment"
        app:destination="@id/SecondFragment" />

    <action
        android:id="@+id/action_FirstFragment_to_ThirdFragment"
        app:destination="@id/ThirdFragment" />

    <action
        android:id="@+id/action_FirstFragment_to_MyExoFragment"
        app:destination="@id/MyExoPlayerFragment" />
  </fragment>
  <fragment
      android:id="@+id/SecondFragment"
      android:name="com.youmehe.mediatry.SecondFragment"
      android:label="@string/second_fragment_label"
      tools:layout="@layout/fragment_second">

    <action
        android:id="@+id/action_SecondFragment_to_FirstFragment"
        app:destination="@id/FirstFragment" />
  </fragment>

  <fragment
      android:id="@+id/ThirdFragment"
      android:name="com.youmehe.mediatry.ThirdFragment"
      android:label="@string/second_fragment_label"
      tools:layout="@layout/fragment_second">

    <action
        android:id="@+id/action_ThirdFragment_to_FirstFragment"
        app:destination="@id/FirstFragment" />
  </fragment>

  <fragment
      android:id="@+id/MyExoPlayerFragment"
      android:name="com.youmehe.mediatry.MyExoPlayerFragment"
      android:label="@string/my_exoplayer_fragment_label"
      tools:layout="@layout/fragment_exo">

    <action
        android:id="@+id/action_MyExoPlayerFragment_to_FirstFragment"
        app:destination="@id/FirstFragment" />
  </fragment>
</navigation>